# audio-processing-ai

./: .cursor.json  .gitignore  LICENSE  README.md  check_bias.py  check_bias_fixed.py  debug_production.py  predict.py  pyproject.toml  requirements.txt  setup.py  threshold_sweep.py  train.py
data/: README.md
dataset/: __init__.py  ai_audio_dataset.py
inference/: __init__.py  audioset_class_labels.txt  audioset_labels_no_index.txt  predict.py
model/: __init__.py
model/pretrained/: cnn14.py  dual_head_cnn14.py  pytorch_utils.py
scripts/: extract_data_from_audio_zip.py
tests/: test_predict.py  test_train.py
train/: train.py
